
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
	android:background="@drawable/stekandro">
    <CheckedTextView
        android:id="@+id/checkedTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="City" />

    <Spinner
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:entries="@array/list_arrays"
         android:prompt="@string/list_prompt"
         android:text="@string/item_label" />
         

    <CheckedTextView
        android:id="@+id/checkedTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Restaurant Name" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckedTextView
        android:id="@+id/checkedTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Street" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <CheckedTextView
        android:id="@+id/checkedTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Milk/Meat" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/go_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_label" />
    

</LinearLayout>